# creator-ai

./: .env.demo  .env.example  .env.production  .gitignore  Anchor.toml  CHANGELOG.md  DEPLOYMENT.md  DESKTOP_IMPLEMENTATION.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.prod  IMPLEMENTATION_SUMMARY.md  INTELLECTUAL_PROPERTY_NOTICE.md  IP_AUDIT_REPORT.md  IP_SECURITY_IMPLEMENTATION_REPORT.md  IP_SECURITY_REPORT.md  LICENSE  MERGE_COMPLETION_GUIDE.md  METALAX_IMPLEMENTATION_STATUS.md  METALAX_TECHNICAL_DOCS.md  NFT-PROJECT-SUMMARY.md  NFT-README.md  README.md  SECURITY.md  TESTING_SUMMARY.md  app.js  backup-service.js  dashboard.html  demo.html  deployment-status.json  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  final-validation.sh  hardhat.config.js  index.html  installer.nsh.bak  jest.config.js  jest.config.simple.js  jest.setup.js  (+16 more)
__tests__/: ContentGenerator.simple.test.tsx  ContentGenerator.test.tsx  Home.simple.test.tsx  Home.test.tsx  ModelStatus.test.tsx  ai-service.test.ts
ai-models/: Dockerfile  Dockerfile.prod  main.py  requirements.txt
app/: globals.css  layout.tsx  page.tsx
assets/: README.md
client/: index.html  package-lock.json  package.json  vite.config.js
components/: ContentGenerator.tsx  ModelStatus.tsx
config/: config.js  nginx.conf
contracts/: CreatorAINFT.sol  README.md
css/: styles.css
deployment/: DEPLOYMENT-GUIDE.md  DNS-CONFIGURATION.md  PRODUCTION-SUMMARY.md
desktop-app/: .gitignore  README.md  demo.sh  package-lock.json  (+3 more)
programs/metalax-nft/: Cargo.toml
programs/metalax-nft/src/: lib.rs
(+151 files in other folders)
